# json_reader

./: .gitignore  BUG_FIX_REPORT.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  a copy.html  a-1.html  a-old.html  a.html  a.js  jest.config.js  latest-update.json  main.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  releasd_prompt.md  release_note_lastest.txt  release_note_latest.txt  t.html  tsconfig.json  vite.config.ts  wdio.conf.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  ci.yml  release.yml
.github/workflows/scripts/: generate-manifest.js
docs/: developer-guide.md  manual-test-checklist.md  user-guide.md
docs/superpowers/plans/: 2026-04-30-test-implementation.md
docs/superpowers/specs/: 2026-04-30-test-strategy-design.md
examples/: test_cases.json  test_page.html
scripts/: auto-version.js  test-macos.sh
src/: index.html  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/utils/: jsonTool.ts
src/utils/__tests__/: jsonTool.test.ts
tests/helpers/: utils.js
tests/playwright/: bug-fix.spec.ts  e2e.spec.ts
tests/specs/: 01-basic.spec.js  02-json-errors.spec.js  03-window-ops.spec.js  04-view-modes.spec.js  05-treeview.spec.js  06-checkboxes-theme.spec.js  07-split-basic.spec.js  08-split-controls.spec.js  09-clipboard.spec.js  10-large-json.spec.js  11-copy-format.spec.js
