[package]
name = "json_formatter_tauri"
version = "0.0.0-dev.30+2f7204e"
edition = "2"

[dependencies]
tauri = { version = "2.9", features = ["tray-icon"] }
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
